test/bad/b1.erl
-module (b1).
-compile({parse_transform, etc}).

nadd(X) -> "" + 1.



